# rustyonions

./: .gitignore  ALLCODEBUNDLES.MD  BASH.md  CA_Blueprint_todo.md  CODECHECK.MD  CODECOMMENTS.MD  Cargo.toml  DailyTodo.md  FINAL_DX.MD  LICENSE  MOGV2.MD  MONTH_TODO.MD  Makefile  NOTES.MD  NOTICE  OLD_NOTES.MD  QUICKCHAIN.MD  QUICKCHAIN_BUILDPLAN.MD  QUICKCHAIN_QC0A_COMBINED.MD  QUICKCHAIN_REVIEW_BUNDLE.MD  README.md  RUN.md  SDK_IDB.MD  SDK_SCHEMA_IDB.MD  STORAGE_PATTERNS_PLAN.MD  STRICT_MODE.md  TESTING_POLICY.md  TODO.md  config.toml  deny.toml  hakari.toml  macronode.toml  newfile.md  refactor_full.md  sample.txt  workspace_code_dump.md
crates/common/: Cargo.toml  README.md
crates/common/src/: hash.rs  lib.rs
crates/gateway/: Cargo.toml  README.md
crates/gateway/docs/: TESTS.md
crates/gateway/examples/: oap_client_demo.rs  oap_server_demo.rs
crates/gateway/src/: index_client.rs  lib.rs  main.rs  metrics.rs  oap.rs  overlay_client.rs  pay_enforce.rs  quotas.rs  resolve.rs  routes.rs  state.rs  utils.rs
crates/gateway/tests/: free_vs_paid.rs  http_read_path.rs  oap_backpressure.rs  oap_error_path.rs  oap_server_roundtrip.rs
crates/index/: Cargo.toml  README.md
crates/index/src/: lib.rs
crates/kameo/: Cargo.toml
crates/kameo/src/: lib.rs
crates/macronode/: CODEBUNDLE.md  Cargo.toml  LICENSE  NOTES.MD  NOTICE  README.md  TODO.MD
crates/macronode/benches/: admin_paths_latency.rs
crates/macronode/docs/: API.MD  CONCURRENCY.MD  CONFIG.MD  GOVERNANCE.MD  IDB.md  INTEROP.MD  OBSERVABILITY.MD  PERFORMANCE.MD  QUANTUM.MD  README.MD  RUNBOOK.MD  SECURITY.MD  TESTS.MD
crates/macronode/scripts/: dump_http_surface.sh  dump_metrics_names.sh  render_mermaid.sh
crates/macronode/src/: errors.rs  main.rs  types.rs
crates/macronode/svc-index.db/: db
crates/macronode/tests/: admin_smoke.rs  metrics_contract.rs  readiness_drain.rs
crates/micronode/: .clippy.toml  .gitignore  .rustfmt.toml  CODEBUNDLE.md  Cargo.toml  LICENSE-APACHE  NOTES.MD  NOTICE  TODO.MD  build.rs
crates/micronode/benches/: http_kv.rs
crates/micronode/configs/: micronode.facets.toml  micronode.toml
crates/micronode/dev_facets/: docs.toml  echo.toml  hello.txt  hello_app.toml  hello_proxy.toml  wow_site.toml
crates/micronode/docs/: IDB.md  SECURITY.MD
crates/micronode/examples/: quickstart.rs
crates/micronode/scripts/: beta_check.sh  smoke_micronode.sh
crates/micronode/src/: app.rs  errors.rs  lib.rs  limits.rs  main.rs  state.rs  types.rs
crates/micronode/tests/: admin_parity.rs  auth_gate.rs  backpressure.rs  cli_smoke.rs  facets_loader.rs  facets_proxy.rs  guard_behavior.rs  kv_roundtrip.rs
crates/naming/: Cargo.toml
crates/naming/src/: address.rs  hash.rs  lib.rs  manifest.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: lib.rs  main.rs
crates/oap/: .gitignore  CODEBUNDLE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES.MD  NOTICE  README.MD  README.snip.md
crates/oap/.cargo/: config.toml
crates/oap/benches/: decode_happy.rs
crates/oap/docs/: API.MD  CONCURRENCY.MD  CONFIG.MD  GOVERNANCE.MD  IDB.md  INTEROP.MD  OBSERVABILITY.MD  PERFORMANCE.MD  QUANTUM.MD  RUNBOOK.MD  SECURITY.MD  TESTS.MD  TODO.MD
crates/oap/scripts/: perf_compare.sh
crates/oap/src/: codec.rs  constants.rs  consts.rs  envelope.rs  error.rs  flags.rs  frame.rs  header.rs  hello.rs  lib.rs  metrics.rs  prelude.rs  seq.rs
crates/oap/tests/: ack_algebra.rs  config_validation.rs  conformance.rs  (+10 more)
crates/omnigate/: .gitignore  CHANGELOG.md  CODEBUNDLE.md  CONFIG.md  Cargo.toml  LICENSE-MIT  NOTES.MD  NOTICE  README.MD  TODO.MD  build.rs  deny.toml
crates/overlay/: Cargo.toml  README.md
crates/ron-accounting/: CHANGELOG.md  CODEBUNDLE.md  Cargo.toml  NOTES.MD  NOTICE  README.MD
crates/ron-app-sdk/: .gitignore  CHANGELOG.md  CODEBUNDLE.md  Cargo.toml  NOTES.MD  NOTICE  README.MD
crates/ron-audit/: CODEBUNDLE.md  CODEOWNERS  Cargo.toml  LICENSE-MIT  NOTES.MD  NOTICE  README.MD  deny.toml
crates/ron-auth/: .editorconfig  .gitignore  CHANGELOG.md  CODEBUNDLE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  NOTES.MD  NOTICE  README.MD  TODO.MD  deny.toml  rustfmt.toml
crates/ron-billing/: Cargo.toml
crates/ron-bus/: .clippy.toml  .gitignore  CODEBUNDLE.md  CODEOWNERS  Cargo.toml  NOTES.MD  NOTICE  README.MD  TODO.MD  deny.toml
crates/ron-kernel/: CHANGELOG.md  CODEBUNDLE.md  Cargo.toml  MOG.MD  NOTES.MD  NOTICE  README.MD  README.md  TODO.MD  deny.toml  rust-toolchain.toml
crates/ron-kms/: CHANGELOG.md  CODEBUNDLE.md  CODEOWNERS  Cargo.toml  LICENSE-APACHE  NOTES.MD  NOTICE  README.MD  TODO.MD  deny.toml  note.md  telemetry.rs
crates/ron-metrics/: .gitignore  CHANGELOG.md  CODEBUNDLE.md  CODEOWNERS  Cargo.toml  LICENSE-MIT  NOTES.MD  NOTICE  README.MD  deny.toml
crates/ron-naming/: CHANGELOG.md  CODEBUNDLE.md  CODEOWNERS  Cargo.toml  MERGE_TODO.MD  NOTES.MD  NOTICE  README.MD  TODO.MD  deny.toml
crates/ron-policy/: CHANGELOG.md  CODEBUNDLE.md  CODEOWNERS  Cargo.toml  NOTES.MD  NOTICE  README.MD  TODO.MD  ZK_TODO.MD  deny.toml
crates/ron-proto/: CODEBUNDLE.md  Cargo.toml  NOTES.MD  NOTICE  TODO.MD
crates/ron-transport/: CODEBUNDLE.md  Cargo.toml  MERGE_TODO.MD  NOTES.MD  NOTICE  README.MD  TODO.MD
crates/ryker/: .clippy.toml  .gitignore  CHANGELOG.md  CODEBUNDLE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTES.MD  NOTICE  README.MD  README.md  TODO.MD  criterion.toml  ryker.example.toml
crates/svc-admin/: .gitignore  CHANGELOG.md  CODEBUNDLE.md  Cargo.toml  NOTICE  README.md  build.rs
crates/svc-dht/: CHANGELOG.MD  CODEBUNDLE.md  Cargo.toml  GOVERNANCE.MD  LICENSE-APACHE  NOTES.MD  NOTICE  build.rs  clippy.toml
crates/svc-edge/: .gitignore  CHANGELOG.md  CODEBUNDLE.md  Cargo.toml  LICENSE-MIT  NOTES.MD  NOTICE  README.MD
svc-gateway2/: Cargo.toml  LICENSE-MIT  README.md
svc-gateway2/benches/: baseline.json
svc-gateway2/docs/: API.md  CONFIG.md  IDB.md  INTEROP.md  OBSERVABILITY.md  PERFORMANCE.md  QUANTUM.md  RUNBOOK.md  SECURITY.md
svc-gateway2/examples/: httpie.http
svc-gateway2/src/: consts.rs  errors.rs  lib.rs  main.rs  result.rs  state.rs
(+3853 files in other folders)
