[workspace]
resolver = "2"
members = [
  "crates/ron-kernel",
  "crates/ron-bus",
  "crates/ron-metrics",
  "crates/ron-proto",
  "crates/oap",
  "crates/ryker",
  "crates/svc-overlay",
  "crates/ron-transport",
  "crates/svc-dht",
  "crates/ron-naming",
  "crates/svc-storage",
  "crates/svc-index",
  "crates/ron-policy",
]

# Add [workspace.dependencies] later when you’re ready to pin shared versions.

[profile.dev]
opt-level = 1

[profile.bench]
debug = false
lto = "thin"
codegen-units = 1
