# Cargo.toml — svc-gateway2
# Role: service crate manifest (features: tls, pq, cli, econ). Keep deps minimal & pinned.
[package]
name = "svc-gateway2"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
tls = []
pq = []
cli = []
econ = []

[dependencies]
# Intentionally empty in scaffold: add real deps during implementation.

[dev-dependencies]
