[package]
publish = false
license = "MIT OR Apache-2.0"


name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
blake3 = "1.5"
hex = "0.4"
toml = "0.8"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

