[package]
publish = false
license = "MIT OR Apache-2.0"


name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = "1"
blake3 = { workspace = true }
hex = { workspace = true }
toml = "0.8"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

