[package]
publish = false
name = "gateway"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"

# Use workspace pins for shared crates (prevents drift).
axum = { workspace = true, features = ["tokio", "http1", "http2", "json", "macros"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5"
tower-http = { workspace = true, features = ["compression-full", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

# Keep your CLI and local libs.
clap = { version = "4.5", features = ["derive"] }
index = { path = "../index" }
naming = { path = "../naming" }

# Keep these as-is unless you’ve also pinned them at workspace level.
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
bytes = "1.7"
blake3 = "1.5"
thiserror = "1.0"
serde_json = "1.0"
ron-bus = { path = "../ron-bus" }
rmp-serde = "1.3"

# Unify rand family to workspace pins (prevents dupes).
rand = { workspace = true, features = ["std"] }
rand_chacha = { workspace = true, features = ["std"] }

# Reqwest: use workspace pin and keep the features you’re already using.
# (We keep 'blocking' because your current file enables it.)
reqwest = { workspace = true, features = ["rustls-tls-native-roots", "json", "blocking"] }

# Hyper bits you already added for the accept loop:
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "service", "tokio"] }

# OAP + kernel (you already had these).
oap = { path = "../oap" }
ron-kernel = { path = "../ron-kernel" }

# Metrics: move to workspace pin (0.14) to match the rest of the repo.
# If you see a compile error here, ping me and I’ll give the matching code tweak.
prometheus = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
legacy-pay = []

[dev-dependencies]
http = "1"
