[package]
publish = false
name = "gateway"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }

# Use workspace pins for shared crates.
axum = { workspace = true, features = ["tokio", "http1", "http2", "json", "macros"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-full", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

# CLI and local libs.
clap = { workspace = true }
index = { workspace = true }
naming = { workspace = true }

# Shared deps now unified via workspace pins.
mime_guess = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
serde = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
ron-bus = { workspace = true }
rmp-serde = { workspace = true }

# Unify rand family to workspace pins.
rand = { workspace = true, features = ["std"] }
rand_chacha = { workspace = true, features = ["std"] }

# HTTP client stack via workspace pins.
reqwest = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }

# OAP + kernel.
oap = { path = "../oap" }
ron-kernel = { workspace = true }

# Metrics via workspace pin.
prometheus = { workspace = true }

workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
legacy-pay = []

[dev-dependencies]
http = "1"
