[package]
publish = false

name = "index"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
naming = { path = "../naming" }
dunce = "1.0"
chrono = { version = "0.4", features = ["clock"] }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
