[package]
publish = false
name = "kameo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tiny actor primitives for RustyOnions demos."

[dependencies]
anyhow = "1"
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
