[package]
name = "macronode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "macronode"
path = "src/main.rs"

[dependencies]
# Core RON-CORE crates this node will coordinate.
ron-kernel = { path = "../ron-kernel" }
ron-proto  = { path = "../ron-proto" }
oap        = { path = "../oap" }

# Async and HTTP stack
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
axum  = { version = "0.7", features = ["http1", "http2", "json", "tokio"] }
tower = "0.4"
http  = "0.2"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus         = "0.14"

# Config / serde
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
humantime       = "2.1"
humantime-serde = "1.1"

# Error handling
thiserror = "1"
anyhow    = "1"

# Misc
parking_lot = "0.12"

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "json"] }
tokio   = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "net"] }
