[package]
name = "macronode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "macronode"
path = "src/main.rs"

[dependencies]
# Core RON-CORE crates this node will coordinate.
ron-kernel  = { path = "../ron-kernel" }
ron-proto   = { path = "../ron-proto" }
oap         = { path = "../oap" }
svc-storage = { path = "../svc-storage" }
svc-index   = { path = "../svc-index" }

# Network & messaging planes (to be fully wired in next slices).
svc-overlay = { path = "../svc-overlay" }
svc-dht     = { path = "../svc-dht" }
svc-mailbox = { path = "../svc-mailbox" }

# Transport layer for overlay/DHT (TCP/TLS/Tor via features).
ron-transport = { path = "../ron-transport" }

# Async and HTTP stack
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
axum  = { version = "0.7", features = ["http1", "http2", "json", "tokio"] }
tower = "0.5"
http  = "1"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus         = "0.14"

# Config / serde
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "0.8"
humantime       = "2.1"
humantime-serde = "1.1"

# Error handling
thiserror = "1"
anyhow    = "1"

# Misc
parking_lot = "0.12"

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "json"] }
tokio   = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "net"] }

[[bench]]
name = "admin_paths_latency"
harness = false
path = "benches/admin_paths_latency.rs"