[package]
authors = ["Stevan White"]
name = "macronode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "macronode"
path = "src/main.rs"

[dependencies]
# Core RON-CORE crates this node will coordinate.
ron-kernel  = { path = "../ron-kernel" }
ron-proto   = { path = "../ron-proto" }
oap         = { path = "../oap" }
svc-storage = { path = "../svc-storage" }
svc-index   = { path = "../svc-index" }

# Network & messaging planes (to be fully wired in next slices).
svc-overlay = { path = "../svc-overlay" }
svc-dht     = { path = "../svc-dht" }
svc-mailbox = { path = "../svc-mailbox" }

# Transport layer for overlay/DHT (TCP/TLS/Tor via features).
ron-transport = { path = "../ron-transport" }

# Async and HTTP stack
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
axum  = { workspace = true, features = ["http1", "http2", "json", "tokio"] }
tower = { workspace = true }
http  = { workspace = true }

# Observability
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
prometheus         = { workspace = true }

# Config / serde
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml       = { workspace = true }

# NOTE: these 2 were failing via workspace inheritance; pin locally.
humantime       = "2.1"
humantime-serde = "1.1"

# System info (CPU/RAM)
sysinfo = { workspace = true }

# Bench infra (node-executed)
reqwest = { workspace = true, default-features = false, features = ["rustls-tls-native-roots", "json"] }

# NOTE: uuid was failing via workspace inheritance; pin locally.
uuid = { version = "1", features = ["v4"] }

rand = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow    = { workspace = true }

# Misc
parking_lot = { workspace = true }

# NOTE: fs2 was failing via workspace inheritance; pin locally.
fs2 = "0.4"

[dev-dependencies]

[[bench]]
name = "admin_paths_latency"
harness = false
path = "benches/admin_paths_latency.rs"
