[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
# Enable env-filter so we can use EnvFilter + with_env_filter(...)
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
serde_json = "1"

# Internal crates
common = { path = "../common" }
overlay = { path = "../overlay" }
transport = { path = "../transport" }
arti_transport = { path = "../arti_transport" }

[lib]
name = "node"
path = "src/lib.rs"

[[bin]]
name = "ronode"
path = "src/main.rs"
