[package]
publish = false
license = "MIT OR Apache-2.0"


name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
color-eyre = "0.6"
# clap with derive + env var support
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ✅ Tokio runtime + macros (needed for #[tokio::main]) + net + signal
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }

overlay = { path = "../overlay" }
transport = { path = "../transport" }
common = { path = "../common" }
