[package]
publish = false
license = "MIT OR Apache-2.0"


name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
color-eyre = "0.6"
# clap with derive + env var support
clap = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ✅ Tokio runtime + macros (needed for #[tokio::main]) + net + signal
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }

overlay = { path = "../overlay" }
transport = { path = "../transport" }
common = { path = "../common" }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
