[package]
name = "oap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "OAP/1 frame codec and DATA packing (b3:<hex>) for RustyOnions"
publish = false

[dependencies]
bytes = { workspace = true }
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
serde_json = { workspace = true }
thiserror = "2"
blake3 = { workspace = true }
hex = { workspace = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
futures = "0.3"
