[package]
name = "oap2"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Pure OAP/1 protocol library: framing, headers, invariants. (Scaffolded structure; no implementation yet.)"
readme = "README.md"
repository = "https://github.com/YOUR_ORG/RustyOnions"

[lib]
path = "src/lib.rs"

[features]
# keep minimal; host owns heavy deps (TLS/HTTP/IO)
default = []
dev-vectors = []

[dev-dependencies]
