[package]
name = "svc-omnigate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "RustyOnions Omnigate (OAP/1 over TCP+TLS) with HELLO, Storage GET streaming (64 KiB), and Mailbox MVP"

[dependencies]
# Workspace-unified deps
anyhow               = { workspace = true }
bytes                = { workspace = true }
futures-util         = { workspace = true }
hyper                = { workspace = true }
hyper-util           = { workspace = true }
rand                 = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
tokio                = { workspace = true, features = ["rt-multi-thread","macros","net","io-util","fs","time","signal"] }
tracing              = { workspace = true }
prometheus           = { workspace = true }
tokio-util           = { workspace = true, features = ["codec"] }
tracing-subscriber   = { workspace = true }

# Local/non-workspace pins
http-body-util       = "0.1"
ulid                 = "1.1"
once_cell            = "1"

# --- TLS stack (explicit provider selection for the server binary)
# Pick aws-lc-rs backend via rustls features. Keep tokio-rustls via workspace pin
# (dropping default-features override to avoid the Cargo warning).
rustls        = { version = "0.23.31", default-features = false, features = ["std", "logging", "tls12", "aws-lc-rs"] }
tokio-rustls  = { workspace = true }
rustls-pemfile = { workspace = true }

# Reuse OAP types/codec
ron-app-sdk = { path = "../ron-app-sdk" }

# Hakari feature unifier
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
