[package]
name = "omnigate2"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Scaffold-only service crate (omnigate2). No implementation yet."

[features]
tls = []
pq = []
zk = []           # read-only; no mutate/settle (enforced by tests/zk_read_only.rs)
reload = []
otel = []

[dependencies]
# Intentionally omitted for scaffold purity; add axum/tokio/etc. when implementing.

[dev-dependencies]
# Add test-only deps later (e.g., proptest, loom, reqwest).
