[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
sled = "0.34"
hex = "0.4"
tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
transport = { path = "../transport" }   # NEW: to accept Transport/Handler

[dev-dependencies]
tempfile = "3"
