[package]
name = "ron-accounting2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
description = "In-memory usage metering (transient counters/snapshots) — scaffold only"
repository = ""

[lib]
path = "src/lib.rs"

[features]
default = ["serde", "parking_lot"]
export-serde = []
ledger-wire = []
wal = []

[dependencies]
# Filled by workspace in real crate; left empty in scaffold.

[dev-dependencies]
