[package]
name = "ron-app-sdk2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RustyOnions application SDK (scaffold)."
readme = "README.md"
repository = ""

[features]
default = ["tls"]
tls = []
tor = []
metrics = []
pq = []
pq-hybrid = []

[dependencies]
# Workspace-pinned deps go here when implemented.

[dev-dependencies]

[package.metadata.docs]