[package]
name = "ron-audit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
fs = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
time = "0.3"
anyhow = { workspace = true }
