[package]
name = "ron-audit2"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Append-only audit evidence (library only) — scaffold"
repository = "https://example.com/RustyOnions"

[lib]
path = "src/lib.rs"

[features]
# In real crate, features like "wal", "export", "pq-sign" would be additive.
default = []
