[package]
name = "ron-auth2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure verification & attenuation library—capability-first, deterministic, fail-closed."
repository = ""
rust-version = "1.80"

[lib]
path = "src/lib.rs"

[features]
default = []
pq = []
pq-hybrid = []
pq-only = []
config-env = []
zk = []

[dependencies]
# intentionally minimal; add real deps during implementation

[dev-dependencies]
# test/bench/fuzz deps go here later