[package]
name = "ron-bus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RustyOnions in-process broadcast bus (bounded, lossy, observable-by-host)"
rust-version = "1.80"
readme = "README.md"
repository = "https://example.com/RustyOnions" # update when ready

[features]
default = []
tracing = ["dep:tracing"]
pq-labels = []            # labels-only; no crypto here
loom = []                 # dev-only (cfg guarded in tests)

[dependencies]
tokio = { version = "1.48.0", features = ["sync", "rt", "macros", "time"] }
tracing = { version = "0.1.41", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
loom = "0.7"
criterion = "0.5"


[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false


[[example]]
name = "publish_smoke"
