[package]
name = "ron-kernel2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RustyOnions microkernel (scaffolded) — frozen, tiny public API."
repository = "https://example.invalid/RustyOnions"
keywords = ["microkernel","supervision","metrics"]
categories = ["asynchronous","concurrency"]

[lib]
path = "src/lib.rs"

[features]
default = ["tokio", "serde"]
kameo = []

[dependencies]
# Keep deps minimal; do not leak surface.
tokio = { version = "1", features = ["rt-multi-thread","macros","signal"], optional = false }
serde = { version = "1", features = ["derive"], optional = false }
# Prometheus/HTTP live in consumer services, not in the kernel surface.

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
proptest = "1"

[package.metadata.docs.rs]
all-features = true
